--- a/src/components/cart1.html
+++ b/src/components/cart1.html
@@ -1,7 +1,9 @@
 <div class="card">
-  <img src="" alt="{{alt}}" class="card__image">
-  <div class="card__content">
-    <h3 class="card__title">{{title}}</h3>
-    <p class="card__text"> {{text}}</p>
+  <picture >
+    <source srcset="@@img-webp" media="(max-width: 381px)">
+    <img src="@@img.webp" alt="@@alt" class="card__image">
+  </picture>
+  <div class="card__body">
+    <h3 class="card__title">@@title</h3>
   </div>
 </div>
