--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -117,3 +117,122 @@
   margin-left: 41px;
   margin-top: 62px;
 }
+.glavfoot{
+  display: flex;
+
+}
+.Links{
+  margin-left: 523px;
+}
+footer{
+  margin-left: 100px; ;
+}
+.glavfooter2{
+  gap: 172px;
+  display: flex;
+  font-family: Poppins;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  color: #9F9F9F;
+}
+.Funirofoot{
+  font-family: Poppins;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 100%;
+  letter-spacing: 0%;
+
+}
+.glavfooter3{
+  gap: 172px;
+  display: flex;
+  font-family: Poppins;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  margin-top: 39px;
+}
+.Home{
+  margin-left: 185px;
+}
+.colar{
+  font-family: Poppins;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  color: #9F9F9F;
+
+
+}
+.podvinyt{
+  margin-left: 598px;
+  margin-top: -21px;
+
+}
+.glavfooter4{
+  display: flex;
+  gap: 181px;
+  margin-top: 22px;
+}
+.glavfooter5{
+  display: flex;
+  gap: 175px;
+  margin-top: 22px;
+}
+.poslednee{
+  margin-top: 22px;
+}
+.furino{
+  margin-top: 23px;
+  font-family: Poppins;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 100%;
+  letter-spacing: 0%;
+
+}
+.Browse{
+  font-family: Poppins;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 100%;
+  letter-spacing: 0px;
+  margin-left: 543px;
+  margin-top: 56px;
+}
+.Lorembloc2{
+  font-family: Poppins;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 100%;
+  letter-spacing: 0px;
+  text-align: center;
+  color: #666666;
+  margin-left: -51px;
+  margin-top: -17px;
+
+
+}
+.zgbloc3{
+  font-family: Poppins;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 120%;
+  letter-spacing: 0%;
+  text-align: center;
+  color: #3A3A3A;
+
+}
+
+
+
+
+
+
+
+
+
