я молодец, сделала корзину и всё что есть до неё , но есть проблема с footer

--- a/src/components/cart1.html
+++ b/src/components/cart1.html
@@ -3,7 +3,7 @@
     <source srcset="@@img-webp" media="(max-width: 381px)">
     <img src="@@img.webp" alt="@@alt" class="card__image">
   </picture>
-  <div class="card__body">
+  <div class="card__body2">
     <h3 class="card__title">@@title</h3>
   </div>
 </div>
