--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -1,4 +1,11 @@
 <footer>
+    <hr style="border: 0;
+    height: 2px;
+    background-color: #D9D9D9;
+    margin-left: -114px;
+    width: 1448px;
+    position: absolute;
+    margin-top: -57px;">
     <div class="glavfoot">
         <div class="Funirofoot">Funiro.</div>
         <div class="glavfooter2">
