--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -7,7 +7,9 @@
   padding: 20px;
   margin-top: 62px;
 }
-
+.card__body2{
+  text-align: center;
+}
 .category-card {
   position: relative;
   width: 100%;
