--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,44 +12,14 @@
 // ==== 4. Components ====
 @use 'components/button';
 @use 'components/card';
+@use 'components/cartProduct';
+@use 'components/footer';
+@use 'components/heder';
+@use "components/nachalo2";
+@use "components/knopki";
+@use "components/dostichenia";
+@use "components/stranicka3";
 
-.logochelo{display:flex;
-  margin-left:54px;
-  width: 50px;
-  height: 32px;
-  margin-top: 33px;
-}
-.display{
-  display: flex;
-  margin-left: 505px;
-  font-family: Poppins;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 100%;
-  letter-spacing: 0%;
-  justify-content: space-between;
-  width: 31%;
-  margin-top: -14px;
-
-}
-.Furniro{
-  font-family: Montserrat;
-  font-weight: 700;
-  font-size: 34px;
-  line-height: 100%;
-  letter-spacing: 0px;
-  margin-top: 1px;
-  margin-left: 5px;
-
-}
-.navg{
-  margin-left: 1095px;
-  gap: 45px;
-  margin-top: -24px;
-  display: flex;
-  justify-content: space-between; /* Равномерное распределение */
-  width: 6%; /* Или явная ширина, например, 300px */
-}
 .ocnova {
   position: relative; /* Родительский контейнер с относительным позиционированием */
   background: url("../images/ocnova1.webp") no-repeat;
@@ -92,109 +62,12 @@
   color: #333333;
   margin-top: 17px;
 }
-.BUY{
-  width: 222px;
-  height: 74px;
-  top: 585px;
-  left: 778px;
-  padding-top: 25px;
-  padding-right: 72px;
-  padding-bottom: 25px;
-  padding-left: 72px;
-  gap: 10px;
-  background: #B88E2F;
-  color: white;
-  border: none;
-  font-family: Poppins;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 100%;
-  letter-spacing: 0px;
-  text-transform: uppercase;
-  margin-top: 46px;
-}
+
 .textcollection{
   margin-left: 41px;
   margin-top: 62px;
 }
-.glavfoot{
-  display: flex;
 
-}
-.Links{
-  margin-left: 523px;
-}
-footer{
-  margin-left: 100px; ;
-}
-.glavfooter2{
-  gap: 172px;
-  display: flex;
-  font-family: Poppins;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 100%;
-  letter-spacing: 0%;
-  color: #9F9F9F;
-}
-.Funirofoot{
-  font-family: Poppins;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 100%;
-  letter-spacing: 0%;
-
-}
-.glavfooter3{
-  gap: 172px;
-  display: flex;
-  font-family: Poppins;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 100%;
-  letter-spacing: 0%;
-  margin-top: 39px;
-}
-.Home{
-  margin-left: 185px;
-}
-.colar{
-  font-family: Poppins;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 100%;
-  letter-spacing: 0%;
-  color: #9F9F9F;
-
-
-}
-.podvinyt{
-  margin-left: 598px;
-  margin-top: -21px;
-
-}
-.glavfooter4{
-  display: flex;
-  gap: 181px;
-  margin-top: 22px;
-}
-.glavfooter5{
-  display: flex;
-  gap: 175px;
-  margin-top: 22px;
-}
-.poslednee{
-  margin-top: 22px;
-}
-.furino{
-  margin-top: 23px;
-  font-family: Poppins;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 100%;
-  letter-spacing: 0%;
-
-}
 .Browse{
   font-family: Poppins;
   font-weight: 700;
@@ -227,9 +100,143 @@ footer{
   color: #3A3A3A;
 
 }
+.bloc4{
+  height: 670px;
+  background: #FCF8F3;
+  margin-top: 69px;
+}
+.textbloc4{
+  margin-left: 100px;
+  padding-top: 223px;
+}
+.zgbloc4{
+  font-family: Poppins;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 120%;
+  letter-spacing: 0%;
+  color: #3A3A3A;
+}
+.pzg4{
+  font-family: Poppins;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0%;
+  color: #616161;
+  padding-top: 7px;
+}
+.imgbloc4{
+    margin-left: 512px;
+    display: flex;
+    gap: 24px;
+    margin-top: -397px;
+}
+.imgbloc41{
+  width: 404px;
+  height: 582px;
+}
+.imgbloc42{
+  width: 372px;
+  height: 486px;
+}
+.podimg90{
+    width: 235px;
+    height: 130px;
+    margin-left: 15px;
+    background: rgba(255, 255, 255, .7215686275);
+    -webkit-backdrop-filter: blur(3px);
+    backdrop-filter: blur(3px);
+    margin-top: 425px;
+    position: absolute;
+}
+.pzgpodim{
+  font-family: Poppins;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0%;
+  color: #616161;
+  padding-top: 32px;
+  padding-left: 32px;
+}
+.zgpodim{
+  font-family: Poppins;
+  font-weight: 600;
+  font-size: 28px;
+  line-height: 120%;
+  letter-spacing: 0%;
+  color: #3A3A3A;
+  padding-left: 32px;
+  padding-top: 8px;
+}
+.circle{
+  width: 30px;
+  height: 30px;
+  border-radius: 20px;
+  background-color: #B88E2F;
+  border: 5px solid #FFF;
+  outline: 1px solid #B88E2F;
+}
+#oval {
+    width: 15px;
+    height: 15px;
+    background: #D8D8D8;
+    -webkit-border-radius: 100px / 100px;
+    -moz-border-radius: 100px / 100px;
+    border-radius: 100px / 100px;
+}
+.krygi{
+  display: flex;
+  gap: 20px;
+  margin-left: 976px;
+  margin-top: -38px;
+}
+.ovalglav{
+  display: flex;
+  gap: 20px;
+  margin-top: 13px;
+}
+.knkryg{
+    width: 50px;
+    height: 50px;
+    background: #D8D8D8;
+    -webkit-border-radius: 100px / 100px;
+    -moz-border-radius: 100px / 100px;
+    border-radius: 100px / 100px;
+  border: none;
+  background: #FFFFFF;
+  box-shadow: 0px 4px 14px 1px #00000029;
+  color: #B88E2F;
+  border-width: 1.8px;
+  margin-top: -297px;
+  margin-left: 167px;
+}
+.pzg5{
+  text-align: center;
+  font-family: Poppins;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 150%;
+  letter-spacing: 0%;
+  color: #616161;
+  margin-left: 612px;
+
+}
+.zg5{
+  font-family: Poppins;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 120%;
+  letter-spacing: 0%;
+  text-align: center;
+  color: #3A3A3A;
 
 
-
+}
+.bloc5{
+  margin-top: 95px;
+}
 
 
 
