я сделала почти 5 страницу

--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -70,3 +70,26 @@
   margin-left: 41px;
   margin-top: 175px;
 }
+.kntable{
+  width: 215px;
+  height: 64px;
+  border-width: 1px;
+  background:  #B88E2F;
+  font-family: Poppins;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  color: white;
+  border: none;
+}
+.ctran5ppp{
+  width: 222px;
+  height: 58.9543571472168px;
+  border-width: 1px;
+  border-radius: 15px;
+  border: 1px solid #000000;
+  background: #F9F1E7;
+  margin-top: 59px;
+  margin-left: 78px;
+}
