--- a/src/scss/components/nachalo2.scss
+++ b/src/scss/components/nachalo2.scss
@@ -108,3 +108,10 @@
   justify-content: center;
   align-items: center;
 }
+.imgnachalo2{
+  margin-left: 681px;
+  margin-top: 61px;
+}
+.textnachalo{
+  margin-top: -146px;
+}
