--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,6 +19,10 @@
 @use "components/knopki";
 @use "components/dostichenia";
 @use "components/stranicka3";
+@use "components/stranicka4";
+@use "components/table";
+@use "components/stranicka5";
+
 
 .ocnova {
   position: relative; /* Родительский контейнер с относительным позиционированием */
