--- a/src/components/nachalo2.html
+++ b/src/components/nachalo2.html
@@ -1,4 +1,7 @@
 <div class="nachalo2">
+    @@if (context.img) {
+    <img src="@@img" alt="@@title"  class="imgnachalo2">
+    }
     <div class="textnachalo">
         <h3 class="zgnachalo2">@@title</h3>
         <p class="podzgnachalo2"><b>Home ></b> @@text</p>
