проблема с footer решена но есть ещё маленькие нюансы сделаны все 6 страниц

--- a/src/components/heder.html
+++ b/src/components/heder.html
@@ -58,7 +58,9 @@
                             <a href="./stranicka5.html" target="_blank">
                                 <button class="obchiabitn">Cart</button>
                             </a>
-                            <button class="obchiabitn">Checkout</button>
+                            <a href="./stranicka6.html" target="_blank">
+                                <button class="obchiabitn">Checkout</button>
+                            </a>
                             <a href="./stranicka4.html" target="_blank">
                                 <button class="obchiabitn">Comparison</button>
                             </a>
