--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -93,3 +93,18 @@
   margin-top: 59px;
   margin-left: 78px;
 }
+.Place{
+  width: 318px;
+  height: 64px;
+  border-width: 1px;
+  border-radius: 15px;
+  border: 1px solid #000000;
+  font-family: Poppins;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  background: white;
+  margin-top: 39px;
+
+}
