--- a/src/scss/components/dostichenia.scss
+++ b/src/scss/components/dostichenia.scss
@@ -1,3 +1,4 @@
+
 .dostichenia-container {
   display: flex;
   gap: 55px;
@@ -8,6 +9,17 @@
   align-items: center;
   margin-top: 85px;
 }
+.dostichenia-container2{
+  display: flex;
+  gap: 55px;
+  background: #faf3ea;
+  max-width: 1440px;
+  height: 270px;
+  padding: 0 53px;
+  align-items: center;
+  margin-top: 961px;
+}
+
 
 .dostichenia-item {
   display: flex;
