--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,6 +22,7 @@
 @use "components/stranicka4";
 @use "components/table";
 @use "components/stranicka5";
+@use "components/stranicka6";
 
 
 .ocnova {
@@ -32,7 +33,9 @@
   margin-top: 47px;
   margin-left: -11px;
 }
-
+.FOOTERDR{
+  margin-top: 913px;
+}
 .Collection {
   position: absolute; /* Абсолютное позиционирование внутри .ocnova */
   width: 643px;
