--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -23,6 +23,7 @@ body {
 }
 footer{
   margin-left: 100px;
+  margin-top: -33px;
 }
 .Links {
   margin-left: auto; /* Заменяем фиксированный отступ */
