--- a/src/components/cartProducts.html
+++ b/src/components/cartProducts.html
@@ -2,7 +2,9 @@
   <div class="card__image">
     <img src="@@img" alt="@@alt">
     <div class="card__image-overlay">
-        <button class="animkn">Add to cart</button>
+        <a href="./stranicka3.html" >
+            <button class="animkn">Add to cart</button>
+        </a>
         <div class="imgdisplayanim">
             <img  class="shareanim"  src="./assets/images/share.webp">
             <div class="sharesnimtext">Share</div>
