--- a/src/scss/components/nachalo2.scss
+++ b/src/scss/components/nachalo2.scss
@@ -14,7 +14,7 @@
   letter-spacing: 0%;
   color: #000000;
   text-align: center;
-  padding-top: 121px;
+  margin-top: 180px;
 }
 .podzgnachalo2{
   font-family: Poppins;
@@ -114,4 +114,8 @@
 }
 .textnachalo{
   margin-top: -146px;
+}
+a {
+  text-decoration: none;
+  color: black;
 }
